--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <link rel="Stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="Stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
     <link rel="stylesheet" type="text/css" href="app/dist/style/Website.css">
-    
+
     <title>IO Chat</title>
 </head>
 
 <body>
 
     <div ng-app="MyApp">
-
-        <div id="main">
-            <ng-view>
+        <header id="header">
+        </header>
+        <section id="main">
+           <section id="content">
+               <ng-view>
 
             </ng-view>
-        </div>
+           </section>
+            
+        </section>
     </div>
 
     <script src="bower_components/jquery/dist/jquery.js"></script>
